fixing album get service and adding search functionality
